# Huggsfield_AI

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PLAN.md  README.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  pyproject.toml
fixtures/: conv_career.json  conv_multihop.json  conv_noise.json  conv_pets.json  conv_preferences.json  probes.yaml
src/memory/: auth.py  config.py  db.py  main.py  migrate.py  repository.py  schemas.py
src/memory/clients/: embeddings.py  llm.py  reranker.py
src/memory/migrations/: 001_init.sql  002_messages_embedding.sql
src/memory/prompts/: extract.py  query_rewrite.py  supersession.py
src/memory/routes/: cleanup.py  memories.py  recall.py  search.py  turns.py
src/memory/services/: extraction.py  ingest.py  query_rewrite.py  recall.py  supersession.py
src/memory/util/: json_parse.py  rrf.py  tokens.py
tests/: conftest.py  test_budget.py  test_contract.py  test_history_in_recall.py  test_persistence.py  test_recall_quality.py  test_robustness.py  test_supersession.py
